src/component/tree/snapshots/envision__component__tree__tests__view_disabled.snap
---
source: src/component/tree/tests.rs
assertion_line: 1151
expression: terminal.backend().to_string()
---
  Root
