src/component/tree/snapshots/envision__component__tree__tests__view_expanded_indicator.snap
---
source: src/component/tree/tests.rs
expression: terminal.backend().to_string()
---
▼ Root                                  
    Child
