src/component/tree/snapshots/envision__component__tree__tests__view_with_children.snap
---
source: src/component/tree/tests.rs
expression: terminal.backend().to_string()
---
▼ Parent                                
    Child
